--- a/contrib/crud/media/crud.css
+++ b/contrib/crud/media/crud.css
@@ -1,8 +1,15 @@
 body { background-color: #799AA5; color: #152737; margin: 20px; font-family: Trebuchet MS, sans-serif; }
-#wrapper { width: 70%; left: 50%; margin-left: -35%; position: absolute; padding: 0% 2% 2% 2%; }
+#wrapper {	width: 70%; left: 50%; margin-left: -35%; position: absolute; min-height: 80%;
+			padding: 0% 2% 2% 2%; background: rgba(255,255,255, 0.5); border: 1px solid #fff; 
+			-webkit-box-shadow: 0 5px 5px rgba(0,0,0,.5);
+			-moz-box-shadow: 0 5px 5px rgba(0,0,0,.5);
+			box-shadow: 0 5px 5px rgba(0,0,0,.5); }
+			
 a, a:visited, a:active { color: #682321; text-decoration: none; font-weight: bold; }
 
-h1 { color: #2B4E69; font-size: 250%; width: 100%; text-align: center; border-bottom: 1px solid #2B4E69; padding-bottom: 1%; }
+h1 {	color: #2B4E69; font-size: 300%; font-family: Georgia, serif; letter-spacing: 0.07em;
+		width: 100%; text-align: center; border-bottom: 1px solid #2B4E69; padding-bottom: 1%; 
+		text-shadow: 1px 2px 2px rgba(255,255,255,0.8); }
 
 table { width: 100%; }
 table thead th { color: #FFFFF0; text-transform: uppercase; background-color: #2B4E69; padding: 0.5% 0.5% 0.5% 1%; text-align: left; }
