--- a/contrib/crud/media/crud.css
+++ b/contrib/crud/media/crud.css
@@ -1,5 +1,5 @@
-body { background-color: #799AA5; color: #152737; margin: 20px; font-family: Trebuchet MS, sans-serif; }
-#wrapper {	width: 70%; left: 50%; margin-left: -35%; position: absolute; min-height: 80%;
+body { background-color: #799AA5; color: #152737; font-family: Trebuchet MS, sans-serif; }
+#wrapper {	width: 70%; left: 50%; margin-left: -35%; margin-top: 5%; position: absolute; min-height: 80%;
 			padding: 0% 2% 2% 2%; background: rgba(255,255,255, 0.5); border: 1px solid #fff; 
 			-webkit-box-shadow: 0 5px 5px rgba(0,0,0,.5);
 			-moz-box-shadow: 0 5px 5px rgba(0,0,0,.5);
@@ -19,4 +19,21 @@ label { font-weight: bold; text-transform: uppercase; display: block; margin-bot
 input.text { height: 25px; width: 50%; margin-bottom: 3%; font-size: 100%; padding: 0.5%; }
 textarea { width: 50%; height: 100px; margin-bottom: 3%; font-size: 100%; padding: 0.5%; }
 
-button { border: 1px solid #FFFFF0; background-color: #2B4E69; padding: 1% 2%; font-weight: bold; color: #FFFFF0; font-size: 150%; }
+button { border: 1px solid #FFFFF0; border-radius: 8px; background-color: #2B4E69; padding: 1% 2%; font-weight: bold; color: #FFFFF0; font-size: 150%; }
+
+ul.navigation { 
+	position: fixed; top: -20px; left: -5px; min-height: 75%; top: 50%; margin-top: -37.5%; background-color: #FFFFF0; 
+	display: block; padding: 0; width: 10%; border-radius: 5px;
+	list-style-type: none; float: left;
+	background-color: #2B4E69; 
+	box-shadow: 0 5px 5px rgba(0,0,0,.5);
+}
+
+ul.navigation li a { 
+	float: left; color: rgba(255,255,255,.5); text-transform: uppercase; width: 100%; border-bottom: 1px solid rgba(255,255,255,.5);
+	height: 20px; text-align: center; padding: 15px 0px;
+}
+
+ul.navigation li a:hover {
+	color: #FFFFF0; background-color: rgba(255,255,255,.1);
+}
