--- a/contrib/crud/media/crud.css
+++ b/contrib/crud/media/crud.css
@@ -1,6 +1,6 @@
-body { background-color: #799AA5; color: #152737; font-family: Trebuchet MS, sans-serif; }
+body { background: url(http://subtlepatterns.com/patterns/cardboard.png); color: #152737; font-family: Trebuchet MS, sans-serif; }
 #wrapper {	width: 70%; left: 50%; margin-left: -35%; margin-top: 5%; position: absolute; min-height: 80%;
-			padding: 0% 2% 2% 2%; background: rgba(255,255,255, 0.5); border: 1px solid #fff; 
+			padding: 0% 2% 2% 2%; background: rgba(255,255,255, 0.7); border: 1px solid #fff; 
 			-webkit-box-shadow: 0 5px 5px rgba(0,0,0,.5);
 			-moz-box-shadow: 0 5px 5px rgba(0,0,0,.5);
 			box-shadow: 0 5px 5px rgba(0,0,0,.5); }
@@ -22,18 +22,18 @@ textarea { width: 50%; height: 100px; margin-bottom: 3%; font-size: 100%; paddin
 button { border: 1px solid #FFFFF0; border-radius: 8px; background-color: #2B4E69; padding: 1% 2%; font-weight: bold; color: #FFFFF0; font-size: 150%; }
 
 ul.navigation { 
-	position: fixed; top: -20px; left: -5px; min-height: 75%; top: 50%; margin-top: -37.5%; background-color: #FFFFF0; 
+	position: fixed; top: -20px; left: -5px; min-height: 75%; top: 50%; margin-top: -37.5%;  
 	display: block; padding: 0; width: 10%; border-radius: 5px;
 	list-style-type: none; float: left;
-	background-color: #2B4E69; 
+	background-color: rgba(255,255,255,.5); 
 	box-shadow: 0 5px 5px rgba(0,0,0,.5);
 }
 
 ul.navigation li a { 
-	float: left; color: rgba(255,255,255,.5); text-transform: uppercase; width: 100%; border-bottom: 1px solid rgba(255,255,255,.5);
+	float: left; color: #6F8799; text-transform: uppercase; width: 100%; border-bottom: 1px solid #6F8799;
 	height: 20px; text-align: center; padding: 15px 0px;
 }
 
 ul.navigation li a:hover {
-	color: #FFFFF0; background-color: rgba(255,255,255,.1);
+	color: #2B4E69; background-color: rgba(255,255,255,.1);
 }
