--- a/contrib/crud/media/crud.css
+++ b/contrib/crud/media/crud.css
@@ -1,39 +1,126 @@
-body { background: url(http://subtlepatterns.com/patterns/cardboard.png); color: #152737; font-family: Trebuchet MS, sans-serif; }
-#wrapper {	width: 70%; left: 50%; margin-left: -35%; margin-top: 5%; position: absolute; min-height: 80%;
-			padding: 0% 2% 2% 2%; background: rgba(255,255,255, 0.7); border: 1px solid #fff; 
-			-webkit-box-shadow: 0 5px 5px rgba(0,0,0,.5);
-			-moz-box-shadow: 0 5px 5px rgba(0,0,0,.5);
-			box-shadow: 0 5px 5px rgba(0,0,0,.5); }
-			
-a, a:visited, a:active { color: #682321; text-decoration: none; font-weight: bold; }
+@font-face {
+	font-family: Raleway; 
+	src: url('raleway.ttf'); 
+} 
 
-h1 {	color: #2B4E69; font-size: 300%; font-family: Georgia, serif; letter-spacing: 0.07em;
-		width: 100%; text-align: center; border-bottom: 1px solid #2B4E69; padding-bottom: 1%; 
-		text-shadow: 1px 2px 2px rgba(255,255,255,0.8); }
-
-table { width: 100%; }
-table thead th { color: #FFFFF0; text-transform: uppercase; background-color: #2B4E69; padding: 0.5% 0.5% 0.5% 1%; text-align: left; }
-
-form ol { list-style-type: none; padding: 0; }
-label { font-weight: bold; text-transform: uppercase; display: block; margin-bottom: 1%; color: #2B4E69; }
-input.text { height: 25px; width: 50%; margin-bottom: 3%; font-size: 100%; padding: 0.5%; }
-textarea { width: 50%; height: 100px; margin-bottom: 3%; font-size: 100%; padding: 0.5%; }
-
-button { border: 1px solid #FFFFF0; border-radius: 8px; background-color: #2B4E69; padding: 1% 2%; font-weight: bold; color: #FFFFF0; font-size: 150%; }
-
-ul.navigation { 
-	position: fixed; top: -20px; left: -5px; min-height: 75%; top: 50%; margin-top: -37.5%;  
-	display: block; padding: 0; width: 10%; border-radius: 5px;
-	list-style-type: none; float: left;
-	background-color: rgba(255,255,255,.5); 
-	box-shadow: 0 5px 5px rgba(0,0,0,.5);
+body {
+	color: #152737;
+	font-family: Trebuchet MS, sans-serif;
 }
 
-ul.navigation li a { 
-	float: left; color: #6F8799; text-transform: uppercase; width: 100%; border-bottom: 1px solid #6F8799;
-	height: 20px; text-align: center; padding: 15px 0px;
+#wrapper {
+	width: 70%;
+	left: 50%;
+	margin-left: -35%;
+	margin-top: 5%;
+	position: absolute;
+	min-height: 80%;
+	padding: 0% 2% 2% 2%;
+	/*background: rgba(255,255,255, 0.7);
+	border: 1px solid #fff; 
+	-webkit-box-shadow: 0 5px 5px rgba(0,0,0,.5);
+	-moz-box-shadow: 0 5px 5px rgba(0,0,0,.5);
+	box-shadow: 0 5px 5px rgba(0,0,0,.5);*/
+}
+			
+a, a:visited, a:active { 
+	color: #682321;
+	text-decoration: none;
+	font-weight: bold; 
+}
+
+h1 {
+	color: #2B4E69;
+	font-size: 300%;
+	font-family: Raleway, sans-serif;
+	letter-spacing: 0.07em;
+	width: 100%;
+	border-bottom: 1px solid rgba(0,0,0,.2);
+	padding-bottom: 1%; 
+	text-shadow: 1px 2px 2px rgba(255,255,255,0.8);
+}
+
+table {
+	width: 100%;
+}
+
+table thead th {
+	color: #FFFFF0;
+	text-transform: uppercase;
+	background-color: #2B4E69;
+	padding: 0.5% 0.5% 0.5% 1%;
+	text-align: left;
+}
+
+form ol {
+	list-style-type: none;
+	padding: 0;
+}
+
+label {
+	display: block;
+	margin-bottom: 1%;
+	color: rgba(0,0,0,.5);
+}
+
+input.text {
+	height: 25px;
+	width: 50%;
+	margin-bottom: 3%;
+	font-size: 100%;
+	padding: 0.5%;
+	border: 1px solid #B6C8CE; 
+}
+
+textarea {
+	width: 50%;
+	height: 100px;
+	margin-bottom: 3%;
+	font-size: 100%;
+	padding: 0.5%;
+	border: 1px solid #B6C8CE;
+}
+
+button {
+	border: 1px solid #FFFFF0;
+	font-size: 100%;
+	background: none;
+	height: 25px;
+	padding: 0;
+	color: rgba(0,0,0,.5);
+	margin: 0;
+}
+
+button:hover {
+	border-bottom: 1px solid #2B4E69;
+	color: #2B4E69;	
+}
+
+ul.navigation {
+	position: fixed;
+	top: 118px;
+	left: -5px;
+	display: block;
+	padding: 0;
+	width: 10%;
+	border-radius: 5px;
+	list-style-type: none;
+	float: left;
+}
+
+ul.navigation li a {
+	font-family: Raleway; 
+	float: left;
+	color: rgba(0,0,0,.2);
+	width: 100%;
+	height: 20px;
+	text-align: center;
+	padding: 15px 0px;
+	border-right: 1px solid rgba(0,0,0,.2);
 }
 
 ul.navigation li a:hover {
-	color: #2B4E69; background-color: rgba(255,255,255,.1);
+	border-right: 1px solid #2B4E69;
+	background-color: rgba(255,255,255,.1);
+	color: #2B4E69;
 }
